# hough-server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
hough_server/: __init__.py  client.py  cpu_worker.py  protocol.py  server.py
scripts/: setup_dev_environment.sh
